--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve --mode development",
+    "dev:test": "vue-cli-service serve --mode test",
+    "dev:prod": "vue-cli-service serve --mode production",
+    "build": "vue-cli-service build --mode production",
+    "build:test": "vue-cli-service build --mode test",
+    "build:development": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
